fixed results page layout bug

--- a/main.css
+++ b/main.css
@@ -94,13 +94,12 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .results {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    display: inline;
 }
 
 .movie-poster {
@@ -112,10 +111,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     border: 1px solid black;
     padding: 10px;
     margin: 10px 0;
+    width: 100%;
 }
 
 .return-button {
